# starrocks-admin

./: .dev-README.md  .gitignore  .gitmessage  LICENSE  Makefile  README.md  config.toml.example  代码质量检查报告.md
backend/: .env.development  .env.production  Cargo.toml  clippy.toml  rust-toolchain.toml  rustfmt.toml
backend/.cargo/: config.toml
backend/.cargo-husky/hooks/: README.md  pre-commit  pre-push
backend/migrations/: 20240101000000_complete_database_schema.sql  20250124000000_add_cluster_overview_tables.sql  20250125000000_unified_database_schema.sql
backend/src/: config.rs  main.rs
backend/src/db/: mod.rs
backend/src/handlers/: auth.rs  backend.rs  cluster.rs  frontend.rs  materialized_view.rs  mod.rs  monitor.rs  overview.rs  profile.rs  query.rs  query_history.rs  query_profile.rs  sessions.rs  system.rs  system_function.rs  system_management.rs  variables.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: cluster.rs  materialized_view.rs  mod.rs  starrocks.rs  system_function.rs  user.rs
backend/src/services/: audit_log_service.rs  auth_service.rs  cluster_service.rs  data_statistics_service.rs  materialized_view_service.rs  metrics_collector_service.rs  mod.rs  mysql_client.rs  mysql_pool_manager.rs  overview_service.rs  overview_service.rs.bak  overview_service.rs.orig  overview_service.rs.rej  starrocks_client.rs  system_function_service.rs
backend/src/utils/: error.rs  jwt.rs  macros.rs  mod.rs  scheduled_executor.rs
deploy/: README.md
dev-doc/: Git分支管理实战指南-提交拆分与分支重组.md  开发环境优化说明.md  开发环境准备.md  热重载优化说明.md  热重载开发.md  编译速度优化.md
docs/: DESIGN.md  (+13 more)
(+152 files in other folders)
